[gd_scene load_steps=10 format=4 uid="uid://yieg2q2arvmi"]

[ext_resource type="PackedScene" uid="uid://c3lnqei4itfpx" path="res://Prefab/TowerDefense/Character/TowerDefensePlant.tscn" id="1"]
[ext_resource type="Script" uid="uid://bv6s88o7g3tdh" path="res://Asset/Anime/Character/Plant/Chapter3/MelonpultSpike/Scene/TowerDefensePlantMelonpultSpike.gd" id="2"]
[ext_resource type="Resource" uid="uid://chgwtubkoq0y" path="res://Asset/Anime/Character/Plant/Chapter3/MelonpultSpike/Config/TowerDefensePlantMelonpultSpike.tres" id="3"]
[ext_resource type="PackedScene" uid="uid://cm14qtjic3i00" path="res://Asset/Anime/Character/Plant/Chapter3/MelonpultSpike/MelonpultSpike.tscn" id="4"]
[ext_resource type="Script" uid="uid://b6lojhfkgvhsw" path="res://addons/AdobeAnimateEditor/Node/AdobeAnimateSlot.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://b5htxrgm8twcr" path="res://Script/Component/TowerDefense/Character/FireComponent/FireComponent.tscn" id="6"]
[ext_resource type="Script" uid="uid://domu0k4tfig2c" path="res://addons/godot_state_charts/atomic_state.gd" id="7"]
[ext_resource type="Script" uid="uid://bnuagwct5sv5y" path="res://addons/godot_state_charts/transition.gd" id="8"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_mig1w"]
b = Vector2(2000, 0)

[node name="TowerDefensePlantMelonpultSpike" node_paths=PackedStringArray("sprite") instance=ExtResource("1")]
script = ExtResource("2")
fireInterval = 3.0
fireNum = 1
config = ExtResource("3")
sprite = NodePath("SpriteGroup/TransformPoint/MelonpultSpike")
Custom = []

[node name="TransformPoint" parent="SpriteGroup" index="1"]
position = Vector2(0, 30)

[node name="MelonpultSpike" parent="SpriteGroup/TransformPoint" index="0" node_paths=PackedStringArray("layerSlot") instance=ExtResource("4")]
position = Vector2(0, -30)
layerSlot = [null, null, null, null, NodePath("AdobeAnimateSlot"), null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null]

[node name="AdobeAnimateSlot" type="Node2D" parent="SpriteGroup/TransformPoint/MelonpultSpike" index="0"]
position = Vector2(-90.515, -35.1978)
rotation = -0.380481
scale = Vector2(0.998384, 0.998384)
script = ExtResource("5")
followSlotId = 5
metadata/_custom_type_script = "uid://b6lojhfkgvhsw"

[node name="Marker2D" type="Marker2D" parent="SpriteGroup/TransformPoint/MelonpultSpike/AdobeAnimateSlot" index="0"]
position = Vector2(30.3939, 28.7827)

[node name="ShadowSprite" parent="." index="3"]
position = Vector2(0, 30)

[node name="FireComponent" parent="." index="5" node_paths=PackedStringArray("firePosMarker", "checkArea") instance=ExtResource("6")]
unique_name_in_owner = true
firePosMarker = [NodePath("../SpriteGroup/TransformPoint/MelonpultSpike/AdobeAnimateSlot/Marker2D")]
checkArea = NodePath("Area2D")
fireInterval = 3.0

[node name="Area2D" type="Area2D" parent="FireComponent" index="0"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="FireComponent/Area2D" index="0"]
shape = SubResource("SegmentShape2D_mig1w")

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, 0)

[node name="Attack" type="Node" parent="StateChart/CompoundState" index="2"]
script = ExtResource("7")

[node name="ToAttack" type="Node" parent="StateChart/CompoundState" index="6"]
script = ExtResource("8")
to = NodePath("../Attack")
event = &"ToAttack"
delay_in_seconds = "0.0"

[connection signal="state_entered" from="StateChart/CompoundState/Attack" to="." method="AttackEntered"]
[connection signal="state_exited" from="StateChart/CompoundState/Attack" to="." method="AttackExited"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Attack" to="." method="AttackProcessing"]
